Fri May 12 07:36:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/Config_Handlers/Utils/Functors.h:
          Added a workaround for specific for BCB6, should fix the gcc4
          internal compiler errors

Fri May 12 07:29:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/Config_Handlers/XSCRT/Elements.hpp:
          The work around is needed for < gcc 3.3 and also BCB6, so make
          it a little bit more easier to handle this.

Thu May 11 21:24:45 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/Literals.cpp:
        * CIDLC/Literals.hpp:
        * CIDLC/ServantHeaderGenerator.cpp:
        * CIDLC/ServantHeaderGenerator.hpp:
        * CIDLC/ServantSourceGenerator.cpp:
        * CIDLC/ServantSourceGenerator.hpp:
        * CIDLC/UtilityTypeNameEmitters.cpp:
        * CIDLC/UtilityTypeNameEmitters.hpp:

          Change code generation for facet servant classes to be
          defined in a special namespace created from a prefix
          and a flattened version of the name of the scope
          containing the interface that supports the facet. This
          change enables facets in the same translation unit
          using the same interface to use a single source code
          definition (an internal check in the CIDL compiler
          guarantees that the facet servant class is generated
          once per interface per translation unit). The fact
          that the actual facet servant class type is an instantiation
          of a template class ensures that the same interface type
          used as a facet in multiple translation units in a build
          will not produce multiple-definition link errors,
          although in this case there will be duplicated code.
          Thanks to James Hill <j.hill@vanderbilt.edu> for providing
          the multiple-facet-single-translation-unit use case
          and to Nanbor Wang <nanbor@txcorp.com> for his comments